@@ -5,6 +5,7 @@ Control-d - Download selected file(s)
 Control-p - Play selected file(s)
 Control-h, Alt-h - Show download history
 Shift-Delete - Delete selected file(s)
+Alt-b - Reset widgets
 Alt-c - Show new videos
 Alt-t - Show Trending
 Escape (on the main window) - Minimize
