@@ -5,6 +5,7 @@ Control-d - Загрузить выбранный(е) файл(ы)
 Control-p - Воспроизвести выбранный(е) файл(ы)
 Control-h, Alt-h - Показать историю загрузок
 Shift-Delete - Удалить выбранный(е) файл(ы)
+Alt-b - Очистить виджеты
 Alt-c - Показать новые видео
 Alt-t - Показать раздел "Популярное"
 Escape (на главном окне) - Свернуть
