@@ -9,6 +9,7 @@ CenterStrain01	https://www.youtube.com/user/CenterStrain01/videos
 Cuteness Overload	https://www.youtube.com/channel/UC_mZ9VeAwUOOpC50CJw0Llw
 Dobryak	https://www.youtube.com/user/mrDobryakovich/videos
 ExplosmEntertainment	https://www.youtube.com/user/ExplosmEntertainment/videos
+GoPro	https://www.youtube.com/channel/UCqhnX4jA0A5paNd1v-zEysw/videos
 itpedia	https://www.youtube.com/user/itpediachannel/videos
 Kapitan Kenguru	https://www.youtube.com/channel/UCjNCNb6dksZcedwlcmLT8TQ/videos
 Kurzgesagt	https://www.youtube.com/user/Kurzgesagt/videos
@@ -30,6 +31,7 @@ TheOdd1sOut	https://www.youtube.com/channel/UCo8bcnLyZH8tBIH9V1mLgqQ/videos
 TheRichest	https://www.youtube.com/channel/UCdxi8d8qRsRyUi2ERYjYb-w/videos
 tophype	https://www.youtube.com/user/SteelBallsStatham/videos
 tritonas01	https://www.youtube.com/channel/UCk2CXNRR5NWa9YkHoefITfQ/videos
+The Lion Whisperer	https://www.youtube.com/channel/UC_NS4MiiHAFo3CYI7fRSLtQ/videos
 varlamov	https://www.youtube.com/channel/UC101o-vQ2iOj9vr00JUlyKw/videos
 Will McDaniel	https://www.youtube.com/channel/UCYJpciSLPC7SpOsrInKShvA/videos
 Алексей Навальный	https://www.youtube.com/user/NavalnyRu/videos
