@@ -1,4 +1,5 @@
 
+* Reset widgets (Alt-b)
 
 1.2
 * Remove duplicated URLs
